--- a/Desktop/PHP/Sites/homework7/public/css/style.css
+++ b/Desktop/PHP/Sites/homework7/public/css/style.css
@@ -4,12 +4,12 @@
 
 .container{
     width: 100vw;
-    height: 200vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     padding-top: 20px;
     background-color: darkgrey;
+    font-family: "American Typewriter";
 
 }
 
@@ -19,22 +19,13 @@
     height: 250px;
 }
 
-.singlePic {
-
-    width: 300px;
-    height: 250px;
-    display: flex;
-    flex-direction: column;
-
-}
 
 .comeBackBtn {
-	width: 100px;
+	width: 120px;
 	height: 50px;
-	margin-left: 30px;
+	margin-left: 10px;
     margin-bottom: 15px;
     margin-top: 15px;
-	
     background-color: pink;
 }
 
@@ -49,4 +40,51 @@
     text-align: center;
     margin-left: -150px;
 
+}
+
+.product {
+    margin-bottom: 2rem;
+    border: lightpink 1px solid;
+    text-align: center;
+
+}
+
+.card-body {
+    text-align: center;
+}
+
+.table {
+   color: white;
+}
+
+.form {
+    border: 6px solid pink;
+    width: 40vw;
+    margin: 10vh 35vw ;
+    padding: 10vh 10vw;
+    text-align: center;
+
+}
+
+.submitBtn {
+    margin-left: 50px;
+
+}
+
+.address {
+    width: 80rem;
+}
+
+
+
+input:invalid{
+    background-color: pink;
+}
+
+.changePic:hover .card-img-top{
+     background-color: green;
+}
+
+.forImg {
+    padding-left: 10rem;
 }
